fix: AWS CLI waiterオプション削除（v2非対応）
## 問題
- `aws ecs wait services-stable`で`--waiter-max-attempts`と`--waiter-delay`オプションを使用
- AWS CLI v2ではこれらのオプションが削除され、エラーが発生
- デプロイが"Wait for deployment to complete"ステップで失敗

## 解決策
- waiterオプションを削除し、デフォルトの動作を使用
- AWS CLI v2のwaiterはデフォルトで約10分のタイムアウト
- デプロイとロールバック両方のステップを修正

## 影響範囲
- デプロイ待機ステップ（11. Wait for deployment to complete）
- ロールバックステップ（14. Rollback on Failure）

## 参考
- AWS CLI v2ではwaiter設定は`~/.aws/cli/config`で管理
- コマンドラインオプションは非サポート

--- a/.github/workflows/deploy-myteacher-app.yml
+++ b/.github/workflows/deploy-myteacher-app.yml
@@ -334,12 +334,11 @@ jobs:
         run: |
           echo "⏳ Waiting for deployment to complete..."
           
-          # 最大15分待機（デフォルト: 10分）
+          # デフォルトタイムアウト（約10分）で待機
+          # AWS CLI v2ではwaiter-max-attempts/waiter-delayオプションは非サポート
           aws ecs wait services-stable \
             --cluster $ECS_CLUSTER \
-            --services $ECS_SERVICE \
-            --waiter-max-attempts 90 \
-            --waiter-delay 10 || {
+            --services $ECS_SERVICE || {
             echo "❌ Deployment failed or timed out"
             exit 1
           }
@@ -409,11 +408,10 @@ jobs:
           }
           
           echo "⏳ Waiting for rollback to complete..."
+          # デフォルトタイムアウトで待機
           aws ecs wait services-stable \
             --cluster $ECS_CLUSTER \
-            --services $ECS_SERVICE \
-            --waiter-max-attempts 60 \
-            --waiter-delay 10
+            --services $ECS_SERVICE
           
           echo "✅ Rollback completed successfully"
           echo "⚠️ Please investigate the deployment failure and fix issues before retrying"
