feat: Migrate PDF generation from mPDF to Browsershot (Chromium + Puppeteer)
- Add Chromium 142.0 and Node.js 20.x to Docker image
- Install Puppeteer 24.31.0 for browser automation
- Replace mPDF with spatie/browsershot 5.1.1
- Implement child-friendly infographic design for monthly reports
- Add donut chart for task classification visualization via QuickChart.io
- Optimize layout to fit on single page (1-page PDF)
- Configure Browsershot environment variables (CHROME_PATH, NODE_PATH, NPM_PATH)
- Update docker-compose.yml to build from Dockerfile instead of pre-built image

Technical changes:
- docker/Dockerfile: +53 lines (Chromium + 30+ system dependencies + Node.js)
- composer.json: Add browsershot, remove mpdf
- package.json: Add puppeteer (305 packages total)
- PdfGenerationService: Complete rewrite (Mpdf → Browsershot)
- Blade template: Redesign with gradient backgrounds, donut chart, CSS icons

Benefits:
- Reliable browser-based HTML/CSS rendering (no mPDF limitations)
- Support for SVG, gradients, shadows, complex layouts
- Child-friendly colorful design with infographics
- Memory usage: 8-10% (1024 MB sufficient)
- Cost increase: +$0.05/month (Option A)

Related docs:
- docs/plans/2025-12-02-browsershot-migration-plan.md
- docs/operations/2025-12-02-ecs-task-definition-update-procedure.md
- docs/reports/2025-12-02-browsershot-phase1-completion-report.md

--- a/.env.example
+++ b/.env.example
@@ -127,3 +127,10 @@ SECURITY_VIRUS_SCAN_ENABLED=true
 # スキャン失敗時の動作（strict: 拒否、lenient: 警告のみ）
 SECURITY_SCAN_FAILURE_MODE=strict
 
+# ========================================
+# Browsershot/Puppeteer設定（PDF生成）
+# ========================================
+BROWSERSHOT_CHROME_PATH=/usr/bin/chromium
+BROWSERSHOT_NODE_PATH=/usr/bin/node
+BROWSERSHOT_NPM_PATH=/usr/bin/npm
+
