--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.28",
         "predis/predis": "^3.2",
+        "spatie/browsershot": "^5.1",
         "stripe/stripe-php": "^17.6"
     },
     "require-dev": {
