--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@alpinejs/focus": "^3.15.1",
         "amazon-cognito-identity-js": "^6.3.13",
-        "chart.js": "^4.5.1"
+        "chart.js": "^4.5.1",
+        "puppeteer": "^24.31.0"
     }
 }
