chore: Update .gitignore to exclude documentation and build artifacts
- Exclude docs/**/*.md (documentation maintained separately)
- Exclude public/build/assets/*.css and *.js (Vite build artifacts)
- Exclude public/build/manifest.json (auto-generated)

--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,12 @@ temp/
 
 # Environment variables documentation (contains sensitive patterns)
 definitions/environment-variables.md
+
+# Documentation files (maintained separately)
+docs/**/*.md
+!docs/README.md
+
+# Build artifacts
+public/build/assets/*.css
+public/build/assets/*.js
+public/build/manifest.json
