fix: Add Puppeteer npm package installation to Dockerfile
Browsershot requires Puppeteer npm package to execute browser.cjs script which uses require('puppeteer'). Without this, PDF generation will fail with MODULE_NOT_FOUND error.

Changes:
- Modified docker/Dockerfile to install puppeteer@24.31.0 globally via npm
- This package version matches package.json specification
- Puppeteer installation is critical for Browsershot PDF/image generation

Technical details:
- Browsershot calls: node browser.cjs -> require('puppeteer') -> launches Chrome/Chromium
- setChromePath() only specifies Chromium binary path, does not eliminate Puppeteer requirement
- Without Puppeteer, browser.cjs fails with 'Cannot find module puppeteer' error

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -78,10 +78,11 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # =============================================================================
-# Node.js 20.x インストール（Browsershot用）
+# Node.js 20.x + Puppeteer インストール（Browsershot用）
 # =============================================================================
 RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
     && apt-get install -y nodejs \
+    && npm install -g puppeteer@24.31.0 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
