fix: Add docker/** path to workflow trigger
Previous commit (a741ec1) added Puppeteer to Dockerfile but workflow was not triggered because docker/** path was missing from trigger paths.

This fix ensures any Dockerfile changes trigger automatic deployment.

--- a/.github/workflows/deploy-myteacher-app.yml
+++ b/.github/workflows/deploy-myteacher-app.yml
@@ -25,6 +25,7 @@ on:
       - 'resources/**'
       - 'routes/**'
       - 'public/**'
+      - 'docker/**'
       - 'composer.json'
       - 'composer.lock'
       - '.github/workflows/deploy-myteacher-app.yml'
