Fix: DockerfileにViteアセットビルドステップを追加
本番環境のCSS未適用問題の根本原因を解決
- Dockerイメージビルド時に npm run build を実行
- ビルド済みアセットをDockerイメージに含める
- 本番環境でmanifest.jsonとアセットファイルの整合性を確保

関連レポート: docs/reports/2025-11-27_HTTPS_MIXED_CONTENT_FIX.md

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -124,6 +124,16 @@ RUN composer install --no-dev --no-scripts --no-autoloader --prefer-dist
 COPY . .
 
 # =============================================================================
+# フロントエンドアセットビルド
+# =============================================================================
+RUN echo "[Docker Build] Building frontend assets with Vite..." \
+    && npm ci --production=false \
+    && npm run build \
+    && rm -rf node_modules \
+    && npm cache clean --force \
+    && echo "[Docker Build] Frontend assets built successfully"
+
+# =============================================================================
 # storage構造の作成（.dockerignoreで除外されたディレクトリを復元）
 # =============================================================================
 RUN mkdir -p storage/logs \
