--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "stripe/stripe-php": "^17.6"
     },
     "require-dev": {
+        "darkaonline/l5-swagger": "^9.0",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.3",
         "laravel/pail": "^1.2.2",
