fix: Add OpenAI API key to CI environment for tests
## 修正内容

### CI/CD環境変数追加
- deploy-myteacher-app.yml: OPENAI_API_KEY ダミー値を追加
- 理由: テストでOpenAIServiceが初期化時にAPIキーを要求
- 実際のAPI呼び出しはHttp::fake()でモック済み

### 影響範囲
- TaskDecompositionTest: OpenAI APIモックテストが正常動作
- ReportApiTest: OpenAI関連処理のテストが正常動作

## テスト環境での動作
- Http::fake()でOpenAI APIをモック
- ダミーAPIキーは実際に使用されない
- テスト専用設定

--- a/.github/workflows/deploy-myteacher-app.yml
+++ b/.github/workflows/deploy-myteacher-app.yml
@@ -89,6 +89,8 @@ jobs:
           CLAMAV_USE_DAEMON: true
           CLAMAV_DAEMON_HOST: localhost
           CLAMAV_DAEMON_PORT: 3310
+          # OpenAI API設定（テスト用ダミー - Http::fake()でモック済み）
+          OPENAI_API_KEY: sk-test-dummy-key-for-ci-environment
         run: |
           echo "🧪 Running tests with SQLite in-memory database..."
           
