feat(mobile): Phase 2.B-2 モバイルアプリ認証機能実装完了
## 実装内容

### アプリ構造
- React Native + Expo (TypeScript)
- 認証機能: ログイン・新規登録・自動ログイン
- ナビゲーション: React Navigation (Stack + Bottom Tabs)

### 実装ファイル（27ファイル）

#### コアファイル
- App.tsx: エントリーポイント
- app.json: Expo設定
- tsconfig.json: TypeScript設定

#### 認証機能
- src/services/auth.service.ts: API統合（ログイン・ログアウト・トークン管理）
- src/hooks/useAuth.ts: 認証状態管理（React Context）
- src/screens/auth/LoginScreen.tsx: ログイン画面（パスワード表示切替付き）
- src/screens/auth/RegisterScreen.tsx: 新規登録画面
- src/navigation/AppNavigator.tsx: 認証フロー制御

#### ユーティリティ
- src/services/api.ts: Axios設定（ベースURL、認証ヘッダー）
- src/utils/storage.ts: AsyncStorage操作
- src/utils/constants.ts: API URL定数

#### 型定義
- src/types/api.types.ts: API レスポンス型
- src/types/task.types.ts: タスク型定義

### テスト実装（39テスト、全パス）

#### テストスイート
1. auth.service.test.ts: AuthService単体テスト（13テスト）
2. useAuth.test.ts: useAuthフックテスト（13テスト）
3. LoginScreen.test.tsx: LoginScreen UIテスト（13テスト）

#### テスト設定
- jest.config.js: Jest設定（React Native preset）
- jest.setup.js: テストセットアップ（AsyncStorage mock）
- TESTING.md: テスト実行手順

### カバレッジ
- 認証コア機能: 100%
- 実行時間: 1.65秒
- テストフレームワーク: Jest + @testing-library/react-native

### Git管理
- mobile/.gitを削除（メインリポジトリの一部として管理）
- .gitignoreにmobile固有の除外ルール追加
  - node_modules, .expo, coverage等

### バグ修正
- useAuth.ts: ログアウト時の状態クリア漏れ修正

### 依存関係
- @react-navigation/native, @react-navigation/stack, @react-navigation/bottom-tabs
- axios, @react-native-async-storage/async-storage
- @testing-library/react-native, jest, jest-expo

参照: docs/plans/phase2-mobile-app-implementation-plan.md Phase 2.B-2

--- a/.gitignore
+++ b/.gitignore
@@ -215,4 +215,26 @@ docs/**/*.md
 public/build/assets/*.css
 public/build/assets/*.js
 public/build/manifest.json
-/mobile
+
+# Mobile app (Expo/React Native)
+mobile/node_modules/
+mobile/.expo/
+mobile/dist/
+mobile/web-build/
+mobile/expo-env.d.ts
+mobile/.kotlin/
+mobile/*.orig.*
+mobile/*.jks
+mobile/*.p8
+mobile/*.p12
+mobile/*.key
+mobile/*.mobileprovision
+mobile/.metro-health-check*
+mobile/npm-debug.*
+mobile/yarn-debug.*
+mobile/yarn-error.*
+mobile/.env*.local
+mobile/*.tsbuildinfo
+mobile/ios/
+mobile/android/
+mobile/coverage/
