--- a/mobile/package.json
+++ b/mobile/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@react-navigation/native-stack": "^7.8.5",
     "@testing-library/react-native": "^12.5.0",
     "@types/jest": "^29.5.14",
     "@types/react": "~19.1.0",
