fix: tests/**パスをCI/CDトリガーに追加
- deploy-myteacher-app.yml: tests/**をpathsに追加
- detect-changes.yml: tests/**をbackendフィルターに追加

理由: テストファイル修正時もCI/CDを実行すべき（品質保証のため）
影響: 今後のテスト修正で自動的にデプロイワークフローが起動

--- a/.github/workflows/deploy-myteacher-app.yml
+++ b/.github/workflows/deploy-myteacher-app.yml
@@ -26,6 +26,7 @@ on:
       - 'routes/**'
       - 'public/**'
       - 'docker/**'
+      - 'tests/**'
       - 'composer.json'
       - 'composer.lock'
       - '.github/workflows/deploy-myteacher-app.yml'
