--- a/mobile/package.json
+++ b/mobile/package.json
@@ -31,12 +31,17 @@
     "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0",
+    "react-native-screens": "^4.16.0",
     "react-native-svg": "^15.15.1",
     "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@expo/ngrok": "^4.1.3",
+    "@react-native-community/cli": "^20.0.2",
+    "@react-native-community/cli-platform-android": "^20.0.2",
+    "@react-native-community/cli-platform-ios": "^20.0.2",
+    "@react-native/typescript-config": "^0.82.1",
     "@react-navigation/native-stack": "^7.8.5",
     "@testing-library/react-native": "^12.5.0",
     "@types/jest": "^29.5.14",
