--- a/mobile/package.json
+++ b/mobile/package.json
@@ -48,6 +48,7 @@
     "@testing-library/react-native": "^12.5.0",
     "@types/jest": "^29.5.14",
     "@types/react": "~19.1.0",
+    "axios-mock-adapter": "^2.1.0",
     "jest": "^29.7.0",
     "jest-expo": "~54.0.0",
     "typescript": "~5.9.2"
