--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "aws/aws-sdk-php": "^3.317",
         "firebase/php-jwt": "^6.10",
+        "kreait/firebase-php": "^7.0",
         "laravel/cashier": "^16.0",
         "laravel/fortify": "^1.32",
         "laravel/framework": "^12.0",
