--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -21,10 +21,12 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["jest", "node"]
   },
   "include": [
     "src/**/*",
+    "__tests__/**/*",
     "App.tsx",
     "index.js"
   ],
