fix: Docker Desktop WSL2ポートマッピング問題の修正
**問題**:
- Docker Desktopでアプリコンテナのポートマッピングが失敗（80/tcp のみ表示、ホストバインドなし）
- Docker Desktop工場出荷設定により全ボリュームが削除（2025-12-10T01:38:15Z）
- ポート8090が既に使用中（Windows netsh portproxyの残骸）

**根本原因**:
1. docker-compose.ymlの`command:`ディレクティブとentrypoint.shの競合
2. Windowsホスト側でポート8090が占有されていた

**解決方法**:
1. `docker-compose.yml`から`command:`を削除（entrypoint.shに処理を一本化）
2. `.gitignore`に`docker-compose.override.yml`を追加
3. ローカル環境用に`docker-compose.override.yml`で8091ポートを使用（gitignore対象）

**変更ファイル**:
- .gitignore: docker-compose.override.yml を追加
- docker-compose.yml: command: ディレクティブを削除、コメント追加

**補足**:
- データベース復旧: 43マイグレーション + 4シーダー実行済み
- テストユーザー作成済み（testuser/password）
- モバイルアプリログイン動作確認済み

参照:
- /home/ktr/mtdev/docs/reports/2025-12-10-docker-desktop-port-mapping-issue-resolution-report.md

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,9 @@ credentials*.json
 # Git管理対象外のバックアップ
 laravel/.git.backup/
 
+# ローカル開発専用Docker設定
+docker-compose.override.yml
+
 # ============================================================================
 # 2. 大容量ディレクトリ (パフォーマンス)
 # ============================================================================
