--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/datetimepicker": "^8.5.1",
     "@react-native-firebase/app": "^23.7.0",
     "@react-native-firebase/messaging": "^23.7.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/bottom-tabs": "^7.8.11",
     "@react-navigation/native": "^7.1.24",
@@ -27,6 +28,7 @@
     "expo": "~54.0.27",
     "expo-file-system": "^19.0.20",
     "expo-image-picker": "^17.0.9",
+    "expo-linear-gradient": "^15.0.8",
     "expo-sharing": "^14.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
