--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,11 +21,13 @@
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/bottom-tabs": "^7.8.11",
+    "@react-navigation/drawer": "^7.7.9",
     "@react-navigation/native": "^7.1.24",
     "@react-navigation/stack": "^7.6.11",
     "@stripe/stripe-react-native": "^0.57.0",
     "axios": "^1.13.2",
     "expo": "~54.0.27",
+    "expo-dev-client": "~6.0.20",
     "expo-file-system": "^19.0.20",
     "expo-image-picker": "^17.0.9",
     "expo-linear-gradient": "^15.0.8",
@@ -35,6 +37,8 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.16.0",
     "react-native-svg": "^15.15.1",
@@ -53,6 +57,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "~19.1.0",
     "axios-mock-adapter": "^2.1.0",
+    "babel-preset-expo": "^54.0.8",
     "jest": "^29.7.0",
     "jest-expo": "~54.0.0",
     "typescript": "~5.9.2"
