docs: ポータル「はじめに」ページリファクタリング完了レポート作成
- docs/reports/portal/2025-12-12-getting-started-page-refactoring-report.mdを作成
  - コンポーネント化（mobile-nav, quick-nav-cards, step-item, sidebar-nav）
  - レスポンシブデザイン強化（全ブレークポイント対応）
  - タイトルアイコンをサイドバーと統一（数字バッジ→SVGアイコン）
  - ARIA属性追加、タッチターゲット48px以上対応
  - HTML構造修正（約290行の重複コード削除）
- docs/mobile/mobile-rules.mdを更新
  - ポータルレポート保管先を追加（/home/ktr/mtdev/docs/reports/portal/）
  - 更新履歴に2025-12-12の変更を記録
- .gitignoreを更新
  - docs/reports/**/*.mdをコミット対象に追加

--- a/.gitignore
+++ b/.gitignore
@@ -213,6 +213,7 @@ definitions/environment-variables.md
 # Documentation files (maintained separately)
 docs/**/*.md
 !docs/README.md
+!docs/reports/**/*.md
 
 # Build artifacts
 public/build/assets/*.css
