--- a/mobile/package.json
+++ b/mobile/package.json
@@ -26,10 +26,11 @@
     "@react-navigation/stack": "^7.6.11",
     "@stripe/stripe-react-native": "^0.57.0",
     "axios": "^1.13.2",
-    "expo": "~54.0.27",
+    "expo": "~54.0.29",
     "expo-build-properties": "^1.0.10",
     "expo-dev-client": "~6.0.20",
     "expo-file-system": "^19.0.20",
+    "expo-font": "~14.0.10",
     "expo-image-picker": "^17.0.9",
     "expo-linear-gradient": "^15.0.8",
     "expo-sharing": "^14.0.8",
@@ -44,7 +45,8 @@
     "react-native-screens": "^4.16.0",
     "react-native-svg": "^15.15.1",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "^13.16.0"
+    "react-native-webview": "^13.16.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
