fix: Change ClamAV image version from 1.4 to latest
- Fix Docker Hub 500 error when pulling clamav/clamav:1.4
- Use latest tag for more reliable image pull

--- a/.github/workflows/deploy-myteacher-app.yml
+++ b/.github/workflows/deploy-myteacher-app.yml
@@ -63,7 +63,7 @@ jobs:
     # ClamAV Service Container（ウイルススキャンテスト用）
     services:
       clamav:
-        image: clamav/clamav:1.4
+        image: clamav/clamav:latest
         ports:
           - 3310:3310
         options: >-
