feat(mobile): Add google-services.json for EAS Build
- Allow google-services.json to be committed for EAS Build compatibility
- Firebase API keys are restricted by Android package name (com.myteacherfamco.app)
- Updated .gitignore to document security considerations
- Simplified eas.json configuration (removed unsupported hooks)

--- a/.gitignore
+++ b/.gitignore
@@ -243,9 +243,10 @@ mobile/ios/
 mobile/android/
 mobile/coverage/
 
-# Firebase configuration files (DO NOT COMMIT)
+# Firebase configuration files
+# (For EAS Build: committed but excluded from web deployment)
 mobile/GoogleService-Info.plist
-mobile/google-services.json
+# mobile/google-services.json (EAS Build requires this file)
 
 # Firebase Admin SDK credentials (DO NOT COMMIT)
 storage/app/firebase/credentials.json
