fix(mobile): プライバシーポリシーURLを環境変数から動的に取得
- Config Pluginで EXPO_PUBLIC_API_URL からベースURLを自動取得
- 開発環境（ngrok）と本番環境でURLを自動切り替え
- eas.json の preview プロファイルを現在のngrok URLに更新

Refs: #privacy-policy-link

--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -15,7 +15,7 @@
     "preview": {
       "distribution": "internal",
       "env": {
-        "EXPO_PUBLIC_API_URL": "https://my-teacher-app.com/api"
+        "EXPO_PUBLIC_API_URL": "https://fizzy-formless-sandi.ngrok-free.dev/api"
       }
     },
     "production": {
