feat: EAS Build本番環境設定を追加（Phase 2.C-1完了）
モバイルアプリのApp Store/Google Play Store申請準備完了

app.config.js:
- アプリ名を「MyTeacher」に変更（表示名）
- userInterfaceStyleを「automatic」に変更（ダークモード対応）
- buildNumber/versionCodeを追加（バージョン管理）
- ATS（App Transport Security）を環境別に設定
  - 本番環境: 個別ドメイン設定（my-teacher-app.com, stripe.com）
  - 開発環境: 一時的に全許可（ngrok接続対応）
- Push通知entitlementsを環境別に設定
  - 本番環境: aps-environment=production
  - 開発/preview環境: aps-environment=development

eas.json:
- productionプロファイル追加
  - releaseChannel: production
  - distribution: store（App Store/Play Store配布用）
  - autoIncrement: true（ビルド番号自動増分）
  - API URL: 本番環境（https://my-teacher-app.com/api）
  - Android: APKビルド指定
- submit設定追加
  - iOS: Apple ID、ASC App ID、Apple Team ID（環境変数）
  - Android: Service Account Key、internal track

ビルド済み:
- Preview Build: iOS完了（ID: 0bb49bf6）- 実機テスト用
- Production Build: 未実施（次フェーズで実行）

関連ドキュメント:
- docs/operations/app-store-submission-guide.md
- docs/operations/ios-device-testing-guide.md
- docs/plans/phase2-mobile-app-implementation-plan.md（2.C-1完了）

--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -19,13 +19,28 @@
       }
     },
     "production": {
+      "releaseChannel": "production",
+      "distribution": "store",
       "autoIncrement": true,
       "env": {
         "EXPO_PUBLIC_API_URL": "https://my-teacher-app.com/api"
+      },
+      "android": {
+        "buildType": "apk"
       }
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "ios": {
+        "appleId": "${APPLE_ID}",
+        "ascAppId": "${ASC_APP_ID}",
+        "appleTeamId": "${APPLE_TEAM_ID}"
+      },
+      "android": {
+        "serviceAccountKeyPath": "./google-play-service-account.json",
+        "track": "internal"
+      }
+    }
   }
 }
