feat: 法的文書のリンク機能とテーブルレイアウト修正
- リンク機能追加:
  - selectable={true}でテキスト選択を有効化
  - onPressでLinking.openURL()実装（外部リンク、mailto）
  - 目次リンクでhandleSectionPress()によるスクロール

- テーブルレイアウト修正:
  - table/tr/th/td用カスタムレンダラー追加
  - flexboxベースの行レイアウト（flexDirection: 'row'）
  - 列均等幅（flex: 1）で崩れを防止
  - border、padding、background適用

- EAS Build設定追加:
  - eas.json: ビルドプロファイル定義
  - app.json: iOS bundleIdentifier設定

修正対象:
- PrivacyPolicyScreen.tsx
- TermsOfServiceScreen.tsx

--- a/app.json
+++ b/app.json
@@ -4,6 +4,12 @@
       "eas": {
         "projectId": "3ad435a3-f81d-4b36-8127-fdff381030c4"
       }
+    },
+    "ios": {
+      "bundleIdentifier": "com.ktr1133.mtdev",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     }
   }
 }
